--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -24,9 +24,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
+
+    implementation "org.threeten:threetenbp:1.3.8"
+
+    implementation project(':circularimagebutton')
+    implementation project(':datetimepickerdialog')
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
