Implemented StrokePieChart, updated dependencies and improved sample

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':sample', ':circularimagebutton', ':datetimepickerdialog'
+include ':sample', ':circularimagebutton', ':datetimepickerdialog', ':strokepiechart'
