--- a/datetimepickerdialog/build.gradle
+++ b/datetimepickerdialog/build.gradle
@@ -18,6 +18,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+apply from: '../dependencies.gradle'
+
 android {
     compileSdkVersion 29
 
@@ -42,17 +44,19 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "junit:junit:$deps.test.junit"
+    androidTestImplementation "androidx.test.ext:junit:$deps.test.ext"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$deps.test.espresso"
 
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$deps.kotlin.common"
 
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.core:core-ktx:$deps.androidx.core"
+    implementation "androidx.appcompat:appcompat:$deps.androidx.appcompat"
+    implementation "androidx.constraintlayout:constraintlayout:$deps.androidx.constraintlayout"
+
+    implementation "com.google.android.material:material:$deps.google.material"
+
+    implementation "com.jakewharton.threetenabp:threetenabp:$deps.libs.threetenabp"
 }
 repositories {
     mavenCentral()
