--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,8 +1,24 @@
+/*
+ * Copyright (c) 2019 - Daniel Guger
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+
+apply from: '../dependencies.gradle'
 
 android {
     compileSdkVersion 29
@@ -25,21 +41,22 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "junit:junit:$deps.test.junit"
+    androidTestImplementation "androidx.test:runner:$deps.test.androidx_test"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$deps.test.espresso"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$deps.kotlin.common"
 
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
+    implementation "androidx.appcompat:appcompat:$deps.androidx.appcompat"
+    implementation "androidx.fragment:fragment-ktx:$deps.androidx.fragment"
+    implementation "androidx.constraintlayout:constraintlayout:$deps.androidx.constraintlayout"
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
+    implementation "com.google.android.material:material:$deps.google.material"
 
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
+    implementation "androidx.navigation:navigation-fragment-ktx:$deps.arch.navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$deps.arch.navigation"
+
+    implementation "com.jakewharton.threetenabp:threetenabp:$deps.libs.threetenabp"
 
     implementation project(':circularimagebutton')
     implementation project(':datetimepickerdialog')
