--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -21,7 +21,7 @@
 
 ext.deps = [:]
 
-deps.gradle = "3.5.1"
+deps.gradle = "3.5.2"
 
 def test = [:]
 test.junit = "4.12"
@@ -48,23 +48,23 @@ androidx.appcompat = "1.1.0"
 androidx.annotation = "1.1.0"
 androidx.fragment = "1.1.0"
 androidx.preference = "1.1.0"
-androidx.biometric = "1.0.0-beta02"
-androidx.viewpager2 = "1.0.0-beta04"
-androidx.recyclerview = "1.1.0-beta04"
+androidx.biometric = "1.0.0"
+androidx.viewpager2 = "1.0.0-rc01"
+androidx.recyclerview = "1.1.0-rc01"
 androidx.cardview = "1.0.0"
 androidx.constraintlayout = "1.1.3"
 deps.androidx = androidx
 
 def google = [:]
-google.material = "1.1.0-beta01"
+google.material = "1.1.0-beta02"
 google.flexbox = "1.1.0"
 deps.google = google
 
 def arch = [:]
-arch.lifecycle = "2.2.0-alpha05"
+arch.lifecycle = "2.2.0-rc02"
 arch.navigation = "2.1.0"
 arch.paging = "2.1.0"
-arch.room = "2.2.0-rc01"
+arch.room = "2.2.1"
 arch.work = "2.2.0"
 deps.arch = arch
 
