--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -37,7 +37,7 @@ test.leakcanary = "1.6.3"
 deps.test = test
 
 def kotlin = [:]
-kotlin.common = "1.3.50"
+kotlin.common = "1.3.60"
 kotlin.coroutines = "1.3.1"
 kotlin.anko = "0.10.8"
 deps.kotlin = kotlin
@@ -49,8 +49,8 @@ androidx.annotation = "1.1.0"
 androidx.fragment = "1.1.0"
 androidx.preference = "1.1.0"
 androidx.biometric = "1.0.0"
-androidx.viewpager2 = "1.0.0-rc01"
-androidx.recyclerview = "1.1.0-rc01"
+androidx.viewpager2 = "1.0.0"
+androidx.recyclerview = "1.1.0rc01"
 androidx.cardview = "1.0.0"
 androidx.constraintlayout = "1.1.3"
 deps.androidx = androidx
@@ -64,7 +64,7 @@ def arch = [:]
 arch.lifecycle = "2.2.0-rc02"
 arch.navigation = "2.1.0"
 arch.paging = "2.1.0"
-arch.room = "2.2.1"
+arch.room = "2.2.2"
 arch.work = "2.2.0"
 deps.arch = arch
 
